--- a/IME.ipynb
+++ b/IME.ipynb
@@ -11,9 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Gboard\n",
     "Ctrl + Space, switch 中/a\n",
     "\n",
-    "Shift"
+    "Shift\n"
    ]
   },
   {
