docs: Việt Nam Telex

--- a/sino/vi/word.ipynb
+++ b/sino/vi/word.ipynb
@@ -62,6 +62,72 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nước hay là trà ?\n",
+    "\n",
+    "Vui lòng cho trà !\n",
+    "\n",
+    "hộ chiếu\n",
+    "\n",
+    "Tôi là người Mỹ !\n",
+    "\n",
+    "hộ chiếu Anh\n",
+    "\n",
+    "Chào, tôi là Minh.\n",
+    "\n",
+    "Xin lỗi, tôi là người.\n",
+    "\n",
+    "hộ chiếu Việt Nam\n",
+    "\n",
+    "Nước Anh\n",
+    "\n",
+    "Nước Mỹ\n",
+    "\n",
+    "hộ chiệu Úc\n",
+    "\n",
+    "Vâng, tôi là người Úc!\n",
+    "\n",
+    "Cà phê nóng hay là cà phê đà?\n",
+    "\n",
+    "Vui lòng cho một tách cà phê!\n",
+    "\n",
+    "Vui lòng cho một tách trà!\n",
+    "\n",
+    "Vâng, với sữa!\n",
+    "\n",
+    "Cà phê vời hay là đường.\n",
+    "\n",
+    "Vui lòng cho trà vời đường.\n",
+    "\n",
+    "Vâng, tôi muốn một tách cà phê!\n",
+    "\n",
+    "Chào buổi sàng.\n",
+    "\n",
+    "Xin chào!\n",
+    "\n",
+    "Xin chào mọi người!\n",
+    "\n",
+    "Vâng, tôi đói!\n",
+    "\n",
+    "Tôi khóe!\n",
+    "\n",
+    "Tôi lâ ngưởi Mỹ, con bạn.\n",
+    "\n",
+    "Minh, dạo này bạn thế nào?\n",
+    "\n",
+    "Gặp lại sau!\n",
+    "\n",
+    "Chúc ngủ ngon!\n",
+    "\n",
+    "Chào tạm biệt!\n",
+    "\n",
+    "Minh, dạo này bạn thế nào?\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
